<resources>
    <string name="app_name">Account</string>
    <string name="mytickets">My Tickets</string>
    <string name="edit">Edit Detail</string>
    <string name="logout">Log Out</string>
    <string name="username">User\'Name</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="phoneNo">Phone Nomber</string>
    <string name="email">E-Mail</string>
    <string name="emailName">Enter e-mail</string>
    <string name="title">I would like to receive GWS promotional updates.</string>
    <string name="save">Save Change</string>
    <string name="changepassword"><![CDATA[Change Password >]]></string>
    <string name="change">Change Pasword</string>
    <string name="current">Current Password</string>
    <string name="confirm">Confirm Change</string>
</resources>